Island perimeter finally solved !!!